--- a/index.html
+++ b/index.html
@@ -21,8 +21,9 @@
 <header>
 	<div class="row">
 		<div class="col-12">
-		<h1>Star Wars Characters</h1>
-		<p>Incomplete list</p>
+			<h1>Star Wars Characters</h1>
+			<p>Incomplete list</p>
+		</div>
 	</div>
 </header>
 	<div class="row">
@@ -30,8 +31,9 @@
 			<div class="card">
 				<img class="card-image" src="images/rey_square.png"/>
 				<div class="card-content">
-				<h3>Rey</h3>
-				<p>Protagonist, from Tatooine</p>
+					<h3>Rey</h3>
+					<p>Protagonist, from Tatooine</p>
+				</div>
 			</div>
 		</div>
 	</div>
@@ -40,8 +42,9 @@
 			<div class="card">
 				<img class="card-image" src="images/finn_square.png"/>
 				<div class="card-content">
-				<h3>Finn</h3>
-				<p>Storm Trooper, befriends Rey</p>
+					<h3>Finn</h3>
+					<p>Storm Trooper, befriends Rey</p>
+				</div>
 			</div>
 		</div>
 	</div>
@@ -50,8 +53,9 @@
 			<div class="card">
 				<img class="card-image" src="images/kylo_square.png"/>
 				<div class="card-content">
-				<h3>Kylo</h3>
-				<p>Main viliian, or is he?</p>
+					<h3>Kylo</h3>
+					<p>Main viliian, or is he?</p>
+				</div>
 			</div>
 		</div>
 	</div>
@@ -60,8 +64,9 @@
 			<div class="card">
 				<img class="card-image" src="images/poe_square.png"/>
 				<div class="card-content">
-				<h3>Poe</h3>
-				<p>Neutral pilot</p>
+					<h3>Poe</h3>
+					<p>Neutral pilot</p>
+				</div>
 			</div>
 		</div>
 	</div>
@@ -70,8 +75,9 @@
 			<div class="card">
 				<img class="card-image" src="images/chewbacca_square.png"/>
 				<div class="card-content">
-				<h3>Chewbacca</h3>
-				<p>A great first mate</p>
+					<h3>Chewbacca</h3>
+					<p>A great first mate</p>
+				</div>
 			</div>
 		</div>
 	</div>
@@ -80,8 +86,9 @@
 			<div class="card">
 				<img class="card-image" src="images/yoda_square.png"/>
 				<div class="card-content">
-				<h3>Yoda</h3>
-				<p>Wise old Jedi master</p>
+					<h3>Yoda</h3>
+					<p>Wise old Jedi master</p>
+				</div>
 			</div>
 		</div>
 	</div>
